--- a/sccapi/src/main/resources/application.properties
+++ b/sccapi/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8083
+spring.mvc.view.prefix=/templates/
+#spring.mvc.view.suffix=.jsp
+logging.level.org.springframework.web=INFO
+#logging.level.org.springframework=TRACE
+#logging.level.com=TRACE
